--- a/README.html
+++ b/README.html
@@ -171,6 +171,8 @@ make test
 
 <p>On Mac OS X, you should run <code>make osxfix</code> before running the unit tests.</p>
 
+<p>As these tests were written with UNIX in mind, there's no guarantee they'll work properly on Windows systems.</p>
+
 <h2>
 <a name="user-content-credits" class="anchor" href="#credits" aria-hidden="true"><span class="octicon octicon-link"></span></a>Credits</h2>
 
@@ -194,7 +196,7 @@ LUT).</li>
 
 <p>@smealum : <a href="http://smealum.net/">http://smealum.net</a>, <a href="mailto:sme@lum.sexy">sme@lum.sexy</a>
 @ArthurSonzogni : <a href="http://panigame.fr/">http://panigame.fr</a>, <a href="mailto:ArthurSonzogni@panigame.fr">ArthurSonzogni@panigame.fr</a>
-@posva : <a href="http://posva.net/">http://posva.net</a>, </p>
+@posva : <a href="http://posva.net/">http://posva.net</a>, <a href="mailto:posva13@gmail.com">posva13@gmail.com</a></p>
       </article>
     </div>
   </div>
