Several improvement (see descriptions).
- Replace libnoise by fractal noise.
- Add WebUI.

--- a/bin_web/index.html
+++ b/bin_web/index.html
@@ -8,6 +8,37 @@
   <body>
     <h3>by @smealum @ArthurSonzogni and @posva!</h3>
 
+    <div id="keyboard_translation">
+      <div class="keyboard_title">Translation</div>
+      <div class="KEY" id="KEY_Q">Q</div>
+      <div class="KEY" id="KEY_W">W</div>
+      <div class="KEY" id="KEY_E">E</div>
+      <div class="KEY" id="KEY_A">A</div>
+      <div class="KEY" id="KEY_S">S</div>
+      <div class="KEY" id="KEY_D">D</div>
+    </div>
+
+    <div id="keyboard_mode">
+      <div class="keyboard_title">Mode</div>
+      <div class="KEY" id="KEY_R">R (ground)</div>
+    </div>
+
+    <div id="keyboard_speed">
+      <div class="keyboard_title"> Speed </div>
+      <div class="KEY" id="KEY_Y">Y</div>
+      <div class="KEY" id="KEY_H">H</div>
+    </div>
+
+    <div id="keyboard_rotation">
+      <div class="keyboard_title">Rotation</div>
+      <div class="KEY" id="KEY_U">U</div>
+      <div class="KEY" id="KEY_I">I</div>
+      <div class="KEY" id="KEY_O">O</div>
+      <div class="KEY" id="KEY_J">J</div>
+      <div class="KEY" id="KEY_K">K</div>
+      <div class="KEY" id="KEY_L">L</div>
+    </div>
+
     <div id="content">
       <h1>SpaceCraft.js </h1>
       <canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()"></canvas>
