Add info about the number of tasks to execute.

--- a/bin_web/index.html
+++ b/bin_web/index.html
@@ -42,8 +42,8 @@
     <div id="content">
       <h1>SpaceCraft.js </h1>
       <canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()"></canvas>
+      <div id="task_counter" style="background-color:red; width:200px;">task_counter</div>
     </div>
-
 
     <div id="footer">
       <textarea class="emscripten" id="output" rows=5> </textarea>
